src/TestFiles/ASTTests/SyntaxErrorTests/tests/test12.c
int main() {


float z = 0.349562;

/**
 *
 *
 *
 * **/ */

int z = 5;
    return 0;

}
